    explicit in the topology (Issue #2468, PR #2775)
  * Added `TransformationBase`. Implemented threadlimit and add an attribute for
    checking if it can be used in parallel analysis. (Issue #2996, PR #2950)
  * Improved performance of H5MDReader by using h5py.Dataset.read_direct()
    to transfer data from HDF5 file into timestep. (PR #3293)

Changes
  * `analysis.rdf.InterRDF` and `analysis.rdf.InterRDF_s` now store
    their result attributes using the `analysis.base.Results` class
    (Issue #3276, #3261)
  * Adds a `force` parameter to the RDKitConverter to allow conversion of
    molecules with no hydrogen atom, and a `set_converter_cache_size` function
    to change how many items are retained in the cache (PR #2942)
  * `hydrogenbonds.WaterBridgeAnalysis.generate_table()` now returns the table; as previously,
    it also generates the `table` attribute but the attribute will be removed in 3.0.0.
  * `hydrogenbonds.WaterBridgeAnalysis` now stores data using the
    `hydrogenbonds.WaterBridgeAnalysis.results` attribute
    (Issue #3261, Issue #3270)
  * Introduces a new converter API with all converters in MDAnalysis.converters
    (Issue #2790, PR #2882)
  * The ParmEd classes were moved to the `converters` module (PR #2882)
  * The `convert_to` method of the AtomGroup is now case-insensitive and
    passes keyword arguments to the underlying converter. It can also be used
    as `convert_to.lowercase_pkg_name()` for tab-completion (PR #2882)
  * `analysis.polymer.PersistenceLength` class now stores `lb`,
    `lp` and `fit` using the `analysis.base.Results` class
    (Issues #3289, #3291)
  * `analysis.hole2.HoleAnalysis` now stores ``sphpdbs``, ``outfiles``
    and ``profiles`` in the `analysis.base.Results` class (Issues #3261, #3269)
  * `analysis.diffusionmap.DistanceMatrix` class now stores `dist_matrix`
    using the `analysis.base.Results` class (Issues #3288, #3290)
  * `helix_analysis.HELANAL` now uses the `analysis.base.Results` class to